bobcat (1.17.1)

  * This version is still ISN

  * Repaired double free bug in Pattern
  
  * Changed the implementation and interface of MailHeaders. See 'man -e
    bobcat mailheaders' for details

  * Process::init() member removed. setCommand() added, and constructors no
    longer call the process start() member. They shouldn't as start() forks,
    and forking an object that isn't constructed yet seems to be
    inappropriate. The open() call in init() is now placed in
    start(). Therefore the correct sequence becomes: 
    Process(), start(), ...(insert/extract)..., stop(). Process::operator=()
    now performs: stop(), setCommand(), start(). Multiple stops() could be
    given, so ... stop(), operator=(), ... is acceptable.
    The Process man-page is updated accordingly.

  * The DateTime class has been enlarged. It now contains members to reassign
    individual time components as well as members to compare the (in)equality
    of the times represented by two DateTime objects. Trailing \n is not
    inserted anymore if a DateTime object is inserted into an
    ostream. Operators +, -, += and -= for DateTime rvalues removed, since a
    date is an interval scaled data type. It is, however, possible to add or
    subtract seconds (or even struct tm structs) and to add/set values to
    individual DateTime components.

bobcat (1.16.1)

  * The `build' script `library' command bow has an additional optional 
    argument `strip' to strip the shared library. By default the library is 
    not stripped.

bobcat (1.16.0)

  * Leftover `String' in string/unescape replaced by `std::string'.

  * Added missing A2x.to<Type>() member template to A2x (cf. C++ Annotations).
    
bobcat (1.15.0)

  * The Glob constructor no longer requires a static_cast when multiple flags
    are specified for its second argument.

  * The TableSupport class's vline(col) member now writes separator[col] to