@@ -1,2 +1,2 @@
-VERSION=1.17.1
+VERSION=1.17.0
 YEARS=2005-2007
