@@ -1,0 +1,3 @@
+#include "x2a.ih"
+
+bool X2a::s_lastFail = false;
