@@ -46,6 +46,11 @@ inline X2a &X2a::operator=(X2a const &rhs)
     return *this;
 }
 
+inline bool X2a::lastFail()
+{
+    return s_lastFail;
+}
+
 } // FBB
 
 
