@@ -1,4 +1,4 @@
-bobcat (1.17.1)
+bobcat (1.17.0)
 
   * This version is still ISN
 
@@ -25,6 +25,9 @@ bobcat (1.17.1)
     date is an interval scaled data type. It is, however, possible to add or
     subtract seconds (or even struct tm structs) and to add/set values to
     individual DateTime components.
+
+  * Implemented lastFail() members in A2x and X2a. See the respective
+    man-pages. 
 
 bobcat (1.16.1)
 
